--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@material-tailwind/react": "0.3.4",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.19.0",
+    "@sanity/image-url": "^1.0.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
