--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.4.1",
+    "@heroicons/react": "^1.0.4",
     "@material-tailwind/react": "0.3.4",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.19.0",
