--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.6.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@iconify/react": "^3.0.1",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,11 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@iconify/react": "^3.0.1",
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   }
 }
