--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "*.css"
   ],
   "dependencies": {
+    "@blueprintjs/core": "^3.52.0",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@iconify/react": "^3.0.1",
