--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
-  "name": "yenumdev",
+  "name": "yenum-app",
   "version": "0.1.0",
   "private": true,
-  "sideEffects": [
-    "*.css"
-  ],
   "dependencies": {
-    "@blueprintjs/core": "^3.52.0",
-    "@headlessui/react": "^1.4.1",
-    "@heroicons/react": "^1.0.4",
-    "@iconify/react": "^3.0.1",
-    "@material-tailwind/react": "0.3.4",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.21.0",
     "@sanity/image-url": "^1.0.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "autoprefixer": "^9.8.8",
-    "axios": "^0.23.0",
-    "moment": "^2.29.1",
-    "postcss": "^8.3.9",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-moment": "^1.1.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-social-icons": "^5.6.1",
-    "react-toastify": "^8.0.3",
-    "sweetalert-react": "^0.4.11",
-    "sweetalert2": "^11.1.8",
-    "sweetalert2-react-content": "^4.1.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16",
-    "web-vitals": "^1.1.2"
+    "react-scripts": "5.0.0",
+    "react-social-icons": "^5.13.0",
+    "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.7",
+    "sweetalert2-react-content": "^4.2.0",
+    "swiper": "^7.2.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.9"
   }
 }
