--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
         "src":"https://res.cloudinary.com/yenum-dev/image/upload/v1702300825/chuckymagic/LiberationCode_pjtf49.png",
         "title": "Liberation Code",
         "description": "Cube Game with accessibility gameplay mechanics Built by me and 9 others for my masters Group project",
-        "url": "https://drive.google.com/file/d/11lLGlOJAHchs-nnn0mtx3nffnN3iGqR9/view?usp=drive_link"
+        "url": "https://officialyenum.itch.io/liberation-code"
     },
     {
         "id":2,
